--- a/index.html
+++ b/index.html
@@ -11,5 +11,23 @@
         <h1>Reynaldi Alvian</h1>
         <p>want to be developer</p>
     </header>
+    <section class="about">
+        <h2>About Me</h2>
+        <p>Programmer Ugal-Ugalan</p>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <img src="Absen-Upacara-Google-Chrome-2023-10-23-19-41-45.gif" alt="Project 1">
+            <h3>Project 1</h3>
+            <p>Membuat Absen Upaca</p>
+        </div>
+        <div class="project">
+            <img src="Cuplikan layar 2023-10-24 073139.png" alt="Project 2">
+            <h3>Project 2</h3>
+            <p>Membuat Absen Upacara</p>
+        </div>
+    </section>
 </body>
 </html>
