menambahkan fitur contact berisi contact

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
         <h1>Reynaldi Alvian</h1>
         <p>want to be developer</p>
     </header>
+    <section class="contact">
+        <h2>Contact</h2>
+        <p>Email: allviann2809@gmail.com</p>
+        <p>Phone: 0821-4308-XXXX</p>
+    </section>
 </body>
 </html>
